# openapi.yml
@@ -15,7 +15,7 @@ paths:
   # mentee
 
   # log
-  /mentee/{mentee_id}/logs:
+  /mentees/{mentee_id}/logs:
     post:
       tags:
         - Logs
@@ -48,13 +48,9 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 201
                   status: "success"
                   message: "insert berhasil"
-                  data:
-                    id: 3
-                    user_id: 2
-                    status_id: 2
-                    logs: "sebenarnya sudah cukup baik, mungkin perlu ada beberapa peningkatan lagi"
         "400":
           description: insert gagal.
           content:
@@ -62,6 +58,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 400
                   status: "failed"
                   message: "insert class failed, bad request"
         "500":
@@ -90,6 +87,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 200
                   status: "success"
                   message: "get success"
                   data:
@@ -139,6 +137,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 400
                   status: "failed"
                   message: "get class failed, bad request"
         "500":
@@ -176,6 +175,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 200
                   status: "success"
                   message: "edit berhasil"
                   data:
@@ -189,6 +189,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 400
                   status: "failed"
                   message: "update logs failed, bad request"
         "500":
@@ -216,6 +217,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 200
                   status: "success"
                   message: "delete berhasil"
         "400":
@@ -225,6 +227,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 400
                   status: "failed"
                   message: "delete logs failed, bad request"
         "500":
@@ -255,11 +258,10 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 201
                   status: "success"
                   message: "insert berhasil"
-                  data:
-                    id: 1
-                    name: "FE 11"
+
         "400":
           description: insert gagal.
           content:
@@ -267,6 +269,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 400
                   status: "failed"
                   message: "insert class failed, bad request"
         "500":
@@ -286,6 +289,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 200
                   status: "success"
                   message: "success get all class"
                   data:
@@ -332,11 +336,10 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 200
                   status: "success"
                   message: "edit berhasil"
-                  data:
-                    id: 1
-                    name: "FE 14"
+
         "400":
           description: edit gagal.
           content:
@@ -344,6 +347,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 400
                   status: "failed"
                   message: "update class failed, bad request"
         "500":
@@ -371,6 +375,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 200
                   status: "success"
                   message: "delete berhasil"
         "400":
@@ -380,6 +385,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 400
                   status: "failed"
                   message: "delete class failed, bad request"
         "500":
@@ -407,6 +413,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 200
                   status: "success"
                   message: "berhasil membaca data class"
                   data:
@@ -419,6 +426,7 @@ paths:
               schema:
                 type: object
                 example:
+                  code: 400
                   status: "failed"
                   message: "get class by id failed, bad request"
         "500":
